--- a/2-MainMatter/chapter2.tex
+++ b/2-MainMatter/chapter2.tex
@@ -26,7 +26,7 @@ Apesar dos seus benefícios comprovados, a revisão de código é uma atividade 
 
 Com o aumento da complexidade dos sistemas de software e do volume de alterações submetidas diariamente, surgiu a necessidade de melhorar o processo de \textit{code review} através de mecanismos de automação. O principal objetivo destas abordagens é reduzir o esforço manual associado a tarefas repetitivas, melhorar a deteção precoce de defeitos e apoiar os revisores humanos na análise das alterações de código~\cite{bacchelli2013expectations}.
 
-As primeiras tentativas de automação do \textit{Code Review} basearam-se essencialmente em ferramentas de análise estática de código. Estas ferramentas analisam o código-fonte sem necessidade de execução, recorrendo a regras pré-definidas para identificar problemas como violações de estilo, padrões perigosos, possíveis erros de execução ou más práticas comuns~\cite{liang2024automation}. Linters e analisadores estáticos tornaram-se parte integrante dos fluxos de desenvolvimento modernos, sendo frequerentemente integrados em pipelines de integração contínua.
+As primeiras tentativas de automação do \textit{Code Review} basearam-se essencialmente em ferramentas de análise estática de código. Estas ferramentas analisam o código-fonte sem necessidade de execução, recorrendo a regras pré-definidas para identificar problemas como violações de estilo, padrões perigosos, possíveis erros de execução ou más práticas comuns~\cite{liang2024automation}. Linters e analisadores estáticos tornaram-se parte integrante dos fluxos de desenvolvimento modernos, sendo frequentemente integrados em pipelines de integração contínua.
 
 Apesar dos benefícios associados à sua utilização, estas abordagens apresentam limitações significativas. Estudos mostram que ferramentas de análise estática tendem a gerar um elevado número de falsos positivos, o que pode levar à sua desvalorização por parte dos programadores~\cite{johnson2013donotuse}. Além disso, estas ferramentas possuem uma compreensão limitada do contexto em que o código é desenvolvido, não conseguindo capturar a intenção do programador, decisões de design ou requisitos específicos do domínio da aplicação~\cite{kim2016warnings}.
 
@@ -40,7 +40,7 @@ As limitações das abordagens tradicionais de automação do \textit{Code Revie
 
 Os primeiros trabalhos nesta área exploraram modelos estatísticos e técnicas de aprendizagem supervisionada para identificar padrões de defeitos, prever a probabilidade de erros e priorizar avisos gerados por ferramentas automáticas~\cite{kim2016warnings}. Estas abordagens demonstraram que informação histórica, como alterações anteriores e decisões tomadas em revisões passadas, pode ser utilizada para melhorar a eficácia do processo de revisão de código.
 
-Com o avanço de técnias de \textit{deep learning}, surgiram modelos capazes de representar o código-fonte de forma mais expressiva, explorando a sua estrutura sintática e semântica. Trabalhos baseados em redes neuronais profundas passaram a utilizar representações como \textit{abstract syntax trees}, grafos de fluxo de controlo e sequências de \textit{tokens}, permitindo capturar relações mais complexas entre diferentes componentes do código base~\cite{tufano2019deeplearning}. Estes modelos mostram melhorias significativas em tarefas como deteção de defeitos, sugestões de correções e identificação de padrões recorrentes no código.
+Com o avanço de técnicas de \textit{deep learning}, surgiram modelos capazes de representar o código-fonte de forma mais expressiva, explorando a sua estrutura sintática e semântica. Trabalhos baseados em redes neuronais profundas passaram a utilizar representações como \textit{abstract syntax trees}, grafos de fluxo de controlo e sequências de \textit{tokens}, permitindo capturar relações mais complexas entre diferentes componentes do código base~\cite{tufano2019deeplearning}. Estes modelos mostram melhorias significativas em tarefas como deteção de defeitos, sugestões de correções e identificação de padrões recorrentes no código.
 
 Outro avanço relevante foi a introdução do conceito de \textit{naturalness} do software, que assume que o código-fonte apresenta regularidades semelhantes às da linguagem natural. Estudos demonstraram que código que se desvia destes padrões tende a estar mais associado a defeitos, o que abriu caminho à aplicação de modelos de linguagem a análise de código~\cite{hindle2012naturalness}. Esta perspetiva reforçou a adequação de técnicas originalmente desenvolvidas para processamento de linguagem natural ao domínio do desenvolvimento de software.
 
@@ -52,7 +52,7 @@ Estas limitações criaram as condições para a adoção de modelos de linguage
 
 Os Modelos de Linguagem de Grande Escala (\texorpdfstring{\gls{LLMs}}{LLMs}) representam a evolução mais recente no campo da aprendizagem profunda aplicada à linguagem. São modelos baseados na arquitetura \textit{Transformer}, treinados com grandes quantidades de dados textuais e, no contexto relevante para esta dissertação, também em código-fonte, que adquiriram capacidades generativas e de compreensão contextual notáveis~\cite{vaswani2017attention, llmsurvey2023}.
 
-Ao contrário dos modelos anteriores de \textit{deep learning} em que é necessário algum tipo de calibração ou ajustes específicos para cada tarefa, os (\texorpdfstring{\gls{LLMs}}{LLMs}) modernos não necessitam de tanta informação ou exemplos para conseguir devovler uma resposta. Isto significa que podem realizar novas tarefas com base apenas em instruções de linguagem natural, sem necessidade de treino adicional extensivo~\cite{brown2020gpt3}. Esta característica é fundamental para a sua aplicação prática em ambientes empresariais, onde a diversidade de tarefas e a necessidade de rápida adaptação são elevadas.
+Ao contrário dos modelos anteriores de \textit{deep learning} em que é necessário algum tipo de calibração ou ajustes específicos para cada tarefa, os (\texorpdfstring{\gls{LLMs}}{LLMs}) modernos não necessitam de tanta informação ou exemplos para conseguir devolver uma resposta. Isto significa que podem realizar novas tarefas com base apenas em instruções de linguagem natural, sem necessidade de treino adicional extensivo~\cite{brown2020gpt3}. Esta característica é fundamental para a sua aplicação prática em ambientes empresariais, onde a diversidade de tarefas e a necessidade de rápida adaptação são elevadas.
 
 Dois aspetos tornam os (\texorpdfstring{\gls{LLMs}}{LLMs}) particularmente adequados para a análise de código:
 \begin{enumerate}
@@ -77,7 +77,7 @@ A aplicação de (\texorpdfstring{\gls{LLMs}}{LLMs}) à automação da revisão 
 
 A eficácia destes sistemas depende criticamente da formulação do \textit{prompt} (a instrução dada ao modelo), do contexto fornecido (o \textit{diff}, mas também potencialmente ficheiros relevantes, descrição do \textit{PR}, etc.) e da existência de um mecanismo para guiar o modelo com o conhecimento específico da organização -- uma lacuna que esta dissertação pretende colmatar.
 
-\section{Limitações atuais e Desafios (não sei se isto fica bem neste capitulo)}
+\section{Limitações atuais e Desafios}
 
 Apesar do potencial demonstrado, a integração prática de (\texorpdfstring{\gls{LLMs}}{LLMs}) no processo de revisão de código em ambientes empresariais específicos, como o da Processware, enfrenta vários desafios significativos:
 
